Change dot to BasicBlock view